# ECAS-B2SHARE

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  README.rst  ecasb2share_cli.py  environment.yml  requirements.txt  setup.cfg  setup.py
binder/: demo-ecas-ophidia  environment.yml  postBuild  workspace.json
demo-ecas-ophidia/: README.md  ecas-b2share-tn.ipynb  ecas-b2share-tn.slides.html  ecas-b2share.ipynb  index.html
docs/: b2share.rst  code.rst  conf.py  index.rst  install.rst
ecasb2share/: __init__.py  ecasb2shareclient.py  exceptions.py  requests.py
ecasb2share/tests/: __init__.py  ecas_b2share_test.py
ecasb2share/tests/test_files/: communities.json  community_records.json  fake_metadata.json  metadata_missing_key.json  record_no_pid.json  token.txt
stack/ECASB2SHARE/: LICENSE.txt  requirements.txt  setup.cfg
stack/ECASB2SHARE/ecasb2share/: ecasb2shareclient.py
