[metadata]
name = ecas-b2share
description = Python library to interact with B2SHARE REST API!
author = Sofiane Bendoukha
author-email = bendoukha@dkrz.de
license = mit
url = https://github.com/SofianeB/ECAS-B2SHARE
long-description = file: README.rst
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True


[options.packages.find]
where = ecas-b2share
exclude =
    tests

testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    __pycache__,
    build,
    dist,
    .eggs,
    .git,
    docs/conf.py,
    ecasb2share_cli.py
max-line-length = 130

[nosetests]
verbosity=3
where=ecasb2share/tests
detailed-errors=1
with-coverage=1
cover-package=ecasb2share
#cover-branches=1
cover-inclusive=1
cover-xml=1
with-xunit=1
xunit-testsuite-name=ecasb2share


